// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`somethingOrOther renders 0 1`] = `
Array [
  .c0 {
  something-or-other: 0;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: 0;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: 0;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`somethingOrOther renders function 1`] = `
Array [
  .c0 {
  something-or-other: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: has;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: has;
}

<div
    className="c0"
  />,
]
`;

exports[`somethingOrOther renders invalid theme path 1`] = `
Array [
  .c0 {
  something-or-other: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`somethingOrOther renders negative number 1`] = `
Array [
  .c0 {
  something-or-other: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`somethingOrOther renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  something-or-other: July;
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    something-or-other: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: July;
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    something-or-other: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    something-or-other: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    something-or-other: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`somethingOrOther renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    something-or-other: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    something-or-other: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    something-or-other: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    something-or-other: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    something-or-other: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    something-or-other: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    something-or-other: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`somethingOrOther renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  something-or-other: July;
}

@media May {
  .c0 {
    something-or-other: August;
  }
}

@media April {
  .c0 {
    something-or-other: September;
  }
}

@media January {
  .c0 {
    something-or-other: November;
  }
}

@media April {
  .c0 {
    something-or-other: August;
  }
}

@media June {
  .c0 {
    something-or-other: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: July;
}

@media May {
  .c0 {
    something-or-other: August;
  }
}

@media April {
  .c0 {
    something-or-other: September;
  }
}

@media January {
  .c0 {
    something-or-other: November;
  }
}

@media April {
  .c0 {
    something-or-other: August;
  }
}

@media June {
  .c0 {
    something-or-other: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    something-or-other: November;
  }
}

@media April {
  .c0 {
    something-or-other: January;
  }
}

@media January {
  .c0 {
    something-or-other: December;
  }
}

@media April {
  .c0 {
    something-or-other: April;
  }
}

@media June {
  .c0 {
    something-or-other: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    something-or-other: November;
  }
}

@media April {
  .c0 {
    something-or-other: January;
  }
}

@media January {
  .c0 {
    something-or-other: December;
  }
}

@media April {
  .c0 {
    something-or-other: April;
  }
}

@media June {
  .c0 {
    something-or-other: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`somethingOrOther renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    something-or-other: July;
  }
}

@media April {
  .c0 {
    something-or-other: August;
  }
}

@media January {
  .c0 {
    something-or-other: September;
  }
}

@media April {
  .c0 {
    something-or-other: November;
  }
}

@media June {
  .c0 {
    something-or-other: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    something-or-other: July;
  }
}

@media April {
  .c0 {
    something-or-other: August;
  }
}

@media January {
  .c0 {
    something-or-other: September;
  }
}

@media April {
  .c0 {
    something-or-other: November;
  }
}

@media June {
  .c0 {
    something-or-other: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    something-or-other: January;
  }
}

@media April {
  .c0 {
    something-or-other: December;
  }
}

@media January {
  .c0 {
    something-or-other: April;
  }
}

@media April {
  .c0 {
    something-or-other: May;
  }
}

@media June {
  .c0 {
    something-or-other: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    something-or-other: January;
  }
}

@media April {
  .c0 {
    something-or-other: December;
  }
}

@media January {
  .c0 {
    something-or-other: April;
  }
}

@media April {
  .c0 {
    something-or-other: May;
  }
}

@media June {
  .c0 {
    something-or-other: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`somethingOrOther renders postitive number 1`] = `
Array [
  .c0 {
  something-or-other: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`somethingOrOther renders string 1`] = `
Array [
  .c0 {
  something-or-other: July;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: July;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: June;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: June;
}

<div
    className="c0"
  />,
]
`;

exports[`somethingOrOther renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`somethingOrOther renders valid theme path 1`] = `
Array [
  .c0 {
  something-or-other: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  something-or-other: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
